welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: not found: value Maths
	if ( n <= 21 ) { Maths.abs( n-21) }
                         ^diff21:3: error: not found: value Maths
	else { 2 * (Maths.abs( n-21 )) }
                    ^