welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
	if ( n <= 21 ) { Maths.abs( n-21) }
	else { 2 * (Maths.abs( n-21 )) }
}
